--- a/2016-01-presentation.tex
+++ b/2016-01-presentation.tex
@@ -2,7 +2,9 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
-%\usepackage{minted}
+\usepackage{pstricks}
+\usepackage{minted}
+\usepackage{lmodern}
 
 \begin{document}
 
@@ -151,6 +153,26 @@ Zwei Matrizen:
 \end{description}
 \end{frame}
 
+\begin{frame}[fragile]
+\frametitle{Bewegung}
+\framesubtitle{OpenGL 2.x}
+Auslesen mit \texttt{glGetFloatv}:\\
+\vspace{0.3cm}
+\textbf{C/C++:}
+\begin{minted}{c}
+GLfloat *m1 = new GLfloat[16];
+GLfloat *m2 = new GLfloat[16];
+glGetFloatv(GL_MODELVIEW_MATRIX, m1);
+glGetFloatv(GL_PROJECTION_MATRIX, m2);
+\end{minted}
+\vspace{0.3cm}
+\textbf{Python:}
+\begin{minted}{python}
+m1 = glGetFloatv(GL_MODELVIEW_MATRIX)
+m2 = glGetFloatv(GL_PROJECTION_MATRIX)
+\end{minted}
+\end{frame}
+
 \begin{frame}
 \frametitle{Bewegung}
 \framesubtitle{OpenGL 2.x}
@@ -169,6 +191,37 @@ Diese kann mit Befehlen wie
 \texttt{glRotated} und
 \texttt{glTranslated}
 bearbeitet werden.
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Kollision}
+\framesubtitle{Schnitt geometrischer Objekte}
+\input{images/dummy.tex}
+\textbf{Vorteil:} einfach zu realisieren \\
+\textbf{Nachtteil:} nicht exakt
+\end{frame}
+
+\begin{frame}
+\frametitle{Kollision}
+\framesubtitle{Schnitt geometrischer Objekte}
+\textbf{Erinnerung an Schulgeometrie}
+\input{images/dummy.tex}
+Zwei Punkte mit Positionen $(x_{1},y_{1}$ und $(x_{2},y_{2}$
+haben den Abstand
+\[ \sqrt{(x_{1}-x_{2})^{2} + (y_{1}-y_{2})^{2}} \]
+zueinander.
+\end{frame}
+
+\begin{frame}
+\frametitle{Kollision}
+\framesubtitle{Schnitt geometrischer Objekte}
+\textbf{Kreis mit Kreis}
+\input{images/dummy.tex}
+Seien $P_{1}$ und $P_{2}$ die Mittelpunkte zweier Kreise
+mit Radien $r_{1}$ und $r_{2}$.
+Die Kreise schneiden sich genau dann, wenn
+\[ abstand(P_{1}, P_{2}) < r_{1} + r_{2}. \]
 \end{frame}
 
 \end{document}
