--- a/2016-01-presentation.tex
+++ b/2016-01-presentation.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
 \usepackage{pstricks}
+\usepackage{pst-plot}
 \usepackage{minted}
 \usepackage{lmodern}
 
@@ -57,7 +58,7 @@
  \left(\begin{array}{c}
   \frac{x}{w} \\
   \\
-  \frac{z}{w} \\
+  \frac{y}{w} \\
  \end{array}\right)
 \end{equation}
 \end{frame}
@@ -206,7 +207,7 @@ bearbeitet werden.
 \frametitle{Kollision}
 \framesubtitle{Schnitt geometrischer Objekte}
 \textbf{Erinnerung an Schulgeometrie}
-\input{images/dummy.tex}
+\input{images/abstand_01.tex}
 Zwei Punkte mit Positionen $(x_{1},y_{1}$ und $(x_{2},y_{2}$
 haben den Abstand
 \[ \sqrt{(x_{1}-x_{2})^{2} + (y_{1}-y_{2})^{2}} \]
@@ -217,11 +218,28 @@ zueinander.
 \frametitle{Kollision}
 \framesubtitle{Schnitt geometrischer Objekte}
 \textbf{Kreis mit Kreis}
-\input{images/dummy.tex}
+\input{images/kreis_01.tex}
 Seien $P_{1}$ und $P_{2}$ die Mittelpunkte zweier Kreise
 mit Radien $r_{1}$ und $r_{2}$.
 Die Kreise schneiden sich genau dann, wenn
 \[ abstand(P_{1}, P_{2}) < r_{1} + r_{2}. \]
+\end{frame}
+
+\begin{frame}
+\frametitle{Kollision}
+\framesubtitle{Schnitt geometrischer Objekte}
+\begin{center}
+{\LARGE Zu einfach?} \\
+\vspace{0.4cm}
+{\LARGE Keine Sorge. Es wird besser.}
+\end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Kollision}
+\framesubtitle{Schnitt geometrischer Objekte}
+\textbf{Konvexes Polygon mit konvexem Polygon}
+\input{images/konvPolygon_01.tex}
 \end{frame}
 
 \end{document}
