--- a/images/konvPolygon_01.tex
+++ b/images/konvPolygon_01.tex
@@ -4,4 +4,14 @@
   \psaxes(0,0)(0,4)
   \pspolygon[linecolor=blue](0.5,1.5)(1.5,0.5)(3,1)(3.5,2.5)(2,3.5)
   \pspolygon[linecolor=blue](3.5,2)(5,1)(7,1)(4.5,3.5)
+  \only<2>{\psline[linecolor=red](2.8,0)(4.0,4)}
+  \only<3>{\psline[linecolor=red](2.17,0)(4.83,4)}
+  \only<4>{\psline[linecolor=red](4,4)(8,0)}
+  \only<5>{\psline[linecolor=red](0,1)(10,1)}
+  \only<6>{\psline[linecolor=red](0.5,4)(6.5,0)}
+  \only<7>{\psline[linecolor=red](0,0.83)(2.375,4)}
+  \only<8>{\psline[linecolor=red](1.25,4)(7.25,0)}
+  \only<9>{\psline[linecolor=red](2.67,0)(4.0,4)}
+%  \only<10>{\psline[linecolor=red](0,0)(10,3.33)}
+%  \only<11>{\psline[linecolor=red](2,0)(0,2)}
 \end{pspicture}
