--- a/images/kreis_01.tex
+++ b/images/kreis_01.tex
@@ -2,7 +2,9 @@
 \begin{pspicture}(0,-0.5)(10,4)
   \psaxes(0,0)(10,0)
   \psaxes(0,0)(0,4)
-  \psline[linecolor=red](3,2)(6,3)
+  \only<2>{\psline[linecolor=red](3,2)(6,3)}
+  \pscircle[fillcolor=black,fillstyle=solid](3,2){0.03}
+  \pscircle[fillcolor=black,fillstyle=solid](6,3){0.03}
   \pscircle[linecolor=blue](3,2){1.5}
   \pscircle[linecolor=blue](6,3){1}
 \end{pspicture}
