--- a/images/abstand_01.tex
+++ b/images/abstand_01.tex
@@ -1,9 +1,27 @@
 \psset{xunit=1cm,yunit=1cm,runit=1cm}
 \begin{pspicture}(0,-0.5)(10,4)
-  \psaxes(0,0)(10,0)
-  \psaxes(0,0)(0,4)
-  \pscircle[fillcolor=black](3,2){0.1}
-  \pscircle(6,3){0.1}
-  \psline[linecolor=red](3,2)(6,3)
-  \only<2>{\psline[linecolor=green](3,2)(6,2)(6,3)}
+  \psaxes(0,0)(10,0)%
+  \psaxes(0,0)(0,4)%
+  \pscircle[fillcolor=black](3,1){0.1}%
+  \pscircle(6,3){0.1}%
+  \psline[linecolor=red](3,1)(6,3)%
+  \only<1>{%
+  \rput(2.5,1.5){$(x_{1},y_{1})$}%
+  \rput(6,3.5){$(x_{2},y_{2})$}%
+  }%
+  \only<2-3>{%
+  \psline[linecolor=green](3,1)(6,1)(6,3)%
+  }%
+  \only<2>{%
+  \psbezier(3,0.9)(3,0.4)(4.5,1.1)(4.5,0.6)%
+  \psbezier(4.5,0.6)(4.5,1.1)(6,0.4)(6,0.9)%
+  \psbezier(6.1,1)(6.6,1)(5.9,2)(6.4,2)%
+  \psbezier(6.4,2)(5.9,2)(6.6,3)(6.1,3)%
+  \rput(4.5,0.4){$\Delta x$}%
+  \rput(6.7,2){$\Delta y$}%
+  }%
+  \only<3>{%
+  \psarc[linecolor=orange](3,1){1}{0}{33.69}%
+  \rput(3.7,1.2){{\color{orange}$\varphi$}}%
+  }%
 \end{pspicture}
