--- a/2016-01/presentation/2016-01-presentation.tex
+++ b/2016-01/presentation/2016-01-presentation.tex
@@ -270,6 +270,13 @@ Die Kreise schneiden sich genau dann, wenn
 \begin{frame}
 \frametitle{Kollision}
 \framesubtitle{Schnitt geometrischer Objekte}
+\textbf{Bestimmung mittels Rotation}
+\input{images/konvPolygon_02_rot.tex}
+\end{frame}
+
+\begin{frame}
+\frametitle{Kollision}
+\framesubtitle{Schnitt geometrischer Objekte}
 \textbf{Konvexes Polygon mit Kreis}
 \input{images/konvPolygon_Kreis_01.tex}
 \end{frame}
